# SpyBot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test.py
Bot/: __main__.py  config.py
Bot/Callbacks/: __init__.py
Bot/Callbacks/Admin/: __init__.py
Bot/Callbacks/User/: __init__.py
Bot/Database/: __init__.py  model.py
Bot/Handlers/: __init__.py
Bot/Handlers/Admin/: __init__.py  handler.py
Bot/Handlers/User/: __init__.py  business.py  commands.py  handler.py
Bot/Middleware/: __init__.py  check_admin.py  database.py
Bot/Utils/: ai.py  crypto.py  formater.py  save.py  spy.py  translate.py  ttl.py
