[project]
name = "spy-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "asyncpg>=0.30.0",
    "cachetools>=6.1.0",
    "colorlog>=6.9.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.42",
]
